# -HP-

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/skills/ship-commercial-app/: SKILL.md
.github/workflows/: build-windows.yml
public/fonts/: README.md
scripts/: make-release.cjs
server/: index.cjs  index.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/clients/: ClientCard.tsx  ClientSection.tsx
src/components/common/: NumberInput.tsx  StatCard.tsx
src/components/fixed/: CeoCompensation.tsx  EmployeeTable.tsx  FixedCostSection.tsx  OtherFixedExpenses.tsx
src/components/layout/: AppHeader.tsx  AssumptionsNotice.tsx  MonthSelector.tsx
src/components/output/: AchievementPanel.tsx  BepChart.tsx  BepComparisonTable.tsx  ClientPnlTable.tsx  OutputSection.tsx
src/components/variable/: BasisToggle.tsx  VariableCostSection.tsx  VariableRecordTable.tsx
src/constants/: rates.ts
src/context/: AppDataContext.tsx
src/hooks/: useBackup.ts  useCalculations.ts  usePrint.ts
src/lib/: id.ts
src/lib/calc/: achievement.ts  bep.ts  calc.test.ts  chartData.ts  clientPnl.ts  fixedCost.ts  index.ts  insurance.ts  revenue.ts  variableCost.ts
src/lib/db/: backup.ts  database.ts  schema.ts
src/lib/format/: month.ts  number.ts
src/styles/: global.css  print.css
src/types/: calc.ts  db.ts  domain.ts
