[package]
name = "bep"
version = "1.0.0"
description = "수압시험 BEP 관리"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
